VSC-327 Add support for ensureVisible

--- a/webviews/listwindow/styles.css
+++ b/webviews/listwindow/styles.css
@@ -1,4 +1,4 @@
-html, body, #app {
+body, #app {
   padding: 0;
-  height: 100%;
+  color: var(--vscode-sideBar-foreground, var(--vscode-foreground));
 }
